// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search snapshots multiple users renders correctly 1`] = `
Array [
  <h2
    className="text-center green-text"
  >
    Search results for 
    shunobaka
    :
  </h2>,
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-md-3"
      >
        <div
          className="jumbotron"
        >
          <a
            href="/user/test1"
            onClick={[Function]}
          >
            <h4
              className="text-center"
            >
              test1
            </h4>
            <img
              className=""
              src="test1"
              width="100%"
            />
          </a>
        </div>
      </div>
      <div
        className="col-md-3"
      >
        <div
          className="jumbotron"
        >
          <a
            href="/user/shunobaka"
            onClick={[Function]}
          >
            <h4
              className="text-center"
            >
              shunobaka
            </h4>
            <img
              className=""
              src="shunobaka"
              width="100%"
            />
          </a>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`search snapshots no users renders correctly 1`] = `
Array [
  <h2
    className="text-center green-text"
  >
    Search results for 
    shunobaka
    :
  </h2>,
  <div
    className="text-center container"
  >
    <br />
    <div
      className="alert alert-warning"
    >
      No users found matching 
      shunobaka
      !
    </div>
  </div>,
]
`;

exports[`search snapshots single user renders correctly 1`] = `
Array [
  <h2
    className="text-center green-text"
  >
    Search results for 
    shunobaka
    :
  </h2>,
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-md-3"
      >
        <div
          className="jumbotron"
        >
          <a
            href="/user/test1"
            onClick={[Function]}
          >
            <h4
              className="text-center"
            >
              test1
            </h4>
            <img
              className=""
              src="test1"
              width="100%"
            />
          </a>
        </div>
      </div>
    </div>
  </div>,
]
`;
